--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,5 @@
-body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
-    color: rgb(40, 169, 40);
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
